Add backend/bin artifacts and update code